# pomidaq

./: README.md
data/: CMakeLists.txt
data/MacOS/: MacOSXBundleInfoTemplate.plist.in  pomidaq.icns
src/: CMakeLists.txt  imageviewwidget.cpp  imageviewwidget.h
